--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 RewriteEngine on
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI}  !(\.json)$
-RewriteRule ^([^?]*)$ /index.php?path=$1 [NC,L,QSA]
+RewriteRule ^([a-zA-Z0-9]+)/([a-zA-Z0-9]+)$ /index.php?action=$1&id=$2 [NC,L,QSA]
+RewriteRule ^([a-zA-Z0-9]+)$ /index.php?action=$1 [NC,L,QSA]
